force-app/main/default/objects/Opportunity/fields/msf_ChangeNoAnonymousContact__c.field-meta.xml
<CustomField>
    <fullName>msf_ChangeNoAnonymousContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reasignación a no anonimo</label>
    <type>Checkbox</type>
</CustomField>