force-app/main/default/objects/Opportunity/fields/msf_ContactRelationshipLevel__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactRelationshipLevel__c</fullName>
    <description>Campo utilizado en MKT Cloud</description>
    <formula>npsp__Primary_Contact__r.msf_RelationshipLevel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level de relación del contacto</label>
    <type>Text</type>
</CustomField>