force-app/main/default/objects/Opportunity/fields/msf_ContactType__c.field-meta.xml
<CustomField>
    <fullName>msf_ContactType__c</fullName>
    <formula>IF(!ISBLANK(npsp__Primary_Contact__c), npsp__Primary_Contact__r.RecordType.DeveloperName, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact type</label>
    <type>Text</type>
</CustomField>