force-app/main/default/objects/Opportunity/fields/msf_Context__c.field-meta.xml
<CustomField>
    <fullName>msf_Context__c</fullName>
    <label>Contexto</label>
    <type>TextArea</type>
</CustomField>