force-app/main/default/objects/Opportunity/fields/msf_CRMExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_CRMExternalId__c</fullName>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>Id aportación</label>
    <type>AutoNumber</type>
</CustomField>