force-app/main/default/objects/Opportunity/fields/msf_CurrentCampaign__c.field-meta.xml
<CustomField>
    <fullName>msf_CurrentCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña actual</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Volunteers_Campaign</value>
        </filterItems>
        <infoMessage>No es posible seleccionar una campaña de Voluntarios</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>