force-app/main/default/objects/Opportunity/fields/msf_CurrentLeadSource1__c.field-meta.xml
<CustomField>
    <fullName>msf_CurrentLeadSource1__c</fullName>
    <label>Canal de entrada 1 actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource1</valueSetName>
    </valueSet>
</CustomField>