force-app/main/default/objects/Opportunity/fields/msf_CurrentLeadSource2__c.field-meta.xml
<CustomField>
    <fullName>msf_CurrentLeadSource2__c</fullName>
    <label>Canal de entrada 2 actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource2</valueSetName>
    </valueSet>
</CustomField>