force-app/main/default/objects/Opportunity/fields/msf_CurrentLeadSource3__c.field-meta.xml
<CustomField>
    <fullName>msf_CurrentLeadSource3__c</fullName>
    <label>Canal de entrada 3 actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource3</valueSetName>
    </valueSet>
</CustomField>