force-app/main/default/objects/Opportunity/fields/msf_CurrentQuotaModification__c.field-meta.xml
<CustomField>
    <fullName>msf_CurrentQuotaModification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modificación de cuota actual</label>
    <referenceTo>msf_QuotaModification__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>