force-app/main/default/objects/Opportunity/fields/msf_CustomExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_CustomExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id externo personalizado</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>