force-app/main/default/objects/Opportunity/fields/msf_DonationVehicleContact__c.field-meta.xml
<CustomField>
    <fullName>msf_DonationVehicleContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Donante por vehículo de donación</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El valor no existe o no coinciden los criterios de filtro. Contacto VD</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual Contact, Organization, Anonymous</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades vehículo de donación</relationshipLabel>
    <relationshipName>DonationVehicleContact</relationshipName>
    <type>Lookup</type>
</CustomField>