force-app/main/default/objects/Opportunity/fields/msf_EmergencyMoment__c.field-meta.xml
<CustomField>
    <fullName>msf_EmergencyMoment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Momento emergencia</label>
    <type>Checkbox</type>
</CustomField>