force-app/main/default/objects/Opportunity/fields/msf_EntryDate__c.field-meta.xml
<CustomField>
    <fullName>msf_EntryDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Fecha de entrada</label>
    <type>Date</type>
</CustomField>