force-app/main/default/objects/Opportunity/fields/msf_Es_Hard_Credit__c.field-meta.xml
<CustomField>
    <fullName>msf_Es_Hard_Credit__c</fullName>
    <formula>IF (ContactId = msf_DonationVehicleContact__c,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Hard Credit</label>
    <type>Checkbox</type>
</CustomField>