force-app/main/default/objects/Opportunity/fields/msf_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>msf_ExpirationDate__c</fullName>
    <formula>TEXT( npsp4hub__Payment_Profile__r.cpm__Expiration_Date__c )
+(IF( ISPICKVAL(npsp4hub__Payment_Profile__r.cpm__Expiration_Date__c,&quot;&quot;)  &amp;&amp; ISPICKVAL(npsp4hub__Payment_Profile__r.cpm__Expiration_Year__c,&quot;&quot;) , &quot;&quot;,&quot;/&quot;))
+ TEXT( npsp4hub__Payment_Profile__r.cpm__Expiration_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caducidad</label>
    <type>Text</type>
</CustomField>