force-app/main/default/objects/Opportunity/fields/msf_FirstDateHistoricalGift__c.field-meta.xml
<CustomField>
    <fullName>msf_FirstDateHistoricalGift__c</fullName>
    <label>Fecha primera donación histórica</label>
    <type>Date</type>
</CustomField>