force-app/main/default/objects/Opportunity/fields/msf_HolderName__c.field-meta.xml
<CustomField>
    <fullName>msf_HolderName__c</fullName>
    <formula>npsp4hub__Payment_Profile__r.cpm__Holder_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Titular</label>
    <type>Text</type>
</CustomField>