force-app/main/default/objects/Opportunity/fields/msf_IBAN__c.field-meta.xml
<CustomField>
    <fullName>msf_IBAN__c</fullName>
    <formula>npsp4hub__Payment_Profile__r.cpm__IBAN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN</label>
    <type>Text</type>
</CustomField>