force-app/main/default/objects/Opportunity/fields/msf_InstallmentPeriod__c.field-meta.xml
<CustomField>
    <fullName>msf_InstallmentPeriod__c</fullName>
    <formula>CASE(TEXT(msf_RecurringPeriod__c),
&quot;Yearly&quot;,$Label.MSF_F_FIELDS_PERIOD_YEARLY,
&quot;Semestral&quot;,$Label.MSF_F_FIELDS_PERIOD_BIANNUAL,
&quot;Bimensual&quot;,$Label.MSF_F_FIELDS_PERIOD_BIMONTHLY,
&quot;Quarterly&quot;,$Label.MSF_F_FIELDS_PERIOD_QUARTERLY,
&quot;Monthly&quot;,$Label.MSF_F_FIELDS_PERIOD_MONTHLY,
&quot;&quot;,	IF(NOT ISPICKVAL((msf_CurrentQuotaModification__r.msf_NewRecurringPeriod__c),&quot;&quot;), 
		CASE(TEXT(msf_CurrentQuotaModification__r.msf_NewRecurringPeriod__c),
		&quot;Yearly&quot;,$Label.MSF_F_FIELDS_PERIOD_YEARLY,
		&quot;Semestral&quot;,$Label.MSF_F_FIELDS_PERIOD_BIANNUAL,
		&quot;Bimensual&quot;,$Label.MSF_F_FIELDS_PERIOD_BIMONTHLY,
		&quot;Quarterly&quot;,$Label.MSF_F_FIELDS_PERIOD_QUARTERLY,
		&quot;Monthly&quot;,$Label.MSF_F_FIELDS_PERIOD_MONTHLY,
		&quot;&quot;,$Label.MSF_F_FIELDS_PERIOD_ONEOFF,
		TEXT(msf_CurrentQuotaModification__r.msf_NewRecurringPeriod__c))
		,
		CASE(TEXT(npe03__Recurring_Donation__r.npe03__Installment_Period__c),
		&quot;Yearly&quot;,$Label.MSF_F_FIELDS_PERIOD_YEARLY,
		&quot;Semestral&quot;,$Label.MSF_F_FIELDS_PERIOD_BIANNUAL,
		&quot;Bimensual&quot;,$Label.MSF_F_FIELDS_PERIOD_BIMONTHLY,
		&quot;Quarterly&quot;,$Label.MSF_F_FIELDS_PERIOD_QUARTERLY,
		&quot;Monthly&quot;,$Label.MSF_F_FIELDS_PERIOD_MONTHLY,
		&quot;&quot;,$Label.MSF_F_FIELDS_PERIOD_ONEOFF,
		TEXT(npe03__Recurring_Donation__r.npe03__Installment_Period__c))
		)
	,
TEXT(msf_RecurringPeriod__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Periodicidad</label>
    <type>Text</type>
</CustomField>