force-app/main/default/objects/Opportunity/fields/msf_IsDonationVehicle__c.field-meta.xml
<CustomField>
    <fullName>msf_IsDonationVehicle__c</fullName>
    <formula>IF(!ISBLANK(msf_DonationVehicleContact__c),
  IF(msf_DonationVehicleContact__c !=  npsp__Primary_Contact__c, true, false),
  false        
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es vehículo de donación</label>
    <type>Checkbox</type>
</CustomField>