force-app/main/default/objects/Opportunity/fields/msf_IsFromLastMonths__c.field-meta.xml
<CustomField>
    <fullName>msf_IsFromLastMonths__c</fullName>
    <formula>IF(OR((CloseDate &gt;= (TODAY() - 365*2)),
		(msf_TypeFundraisingContribution__c = &apos;D&apos; &amp;&amp; CloseDate &gt;= (TODAY() - 365*5)),
		(CloseDate &lt;= (TODAY() - 365*2) &amp;&amp; CloseDate &gt;= (TODAY() - 365*5) &amp;&amp; NOT(ISPICKVAL(Type, &apos;Recurrent Donation&apos;)) &amp;&amp; NOT(ISPICKVAL(Type, &apos;Historical&apos;)) &amp;&amp; NOT(ISPICKVAL(Type, &apos;Membership&apos;)))
      ),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Últimos meses</label>
    <type>Checkbox</type>
</CustomField>