force-app/main/default/objects/Opportunity/fields/msf_IsFromLastMonthsBool__c.field-meta.xml
<CustomField>
    <fullName>msf_IsFromLastMonthsBool__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Nuevo campo para comprobar si la fecha de cierre esta dentro de los últimos 2 años, o si es del tipo D en los últimos 5 años.</description>
    <label>Últimos meses Boolean</label>
    <type>Checkbox</type>
</CustomField>