force-app/main/default/objects/Opportunity/fields/msf_IsFutureDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_IsFutureDonation__c</fullName>
    <description>Indica si una oportunidad esta con fecha cierre a futuro.</description>
    <formula>YEAR(CloseDate) = (YEAR(TODAY())+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es futura (próximo año)</label>
    <type>Checkbox</type>
</CustomField>