force-app/main/default/objects/Opportunity/fields/msf_IsPastDonation__c.field-meta.xml
<CustomField>
    <fullName>msf_IsPastDonation__c</fullName>
    <formula>CloseDate &gt; ADDMONTHS(CloseDate,-24) &amp;&amp; CloseDate &lt;= ADDMONTHS(CloseDate,-12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es pasada (12-24 meses)</label>
    <type>Checkbox</type>
</CustomField>