force-app/main/default/objects/Opportunity/fields/msf_LargestHistoricalGift__c.field-meta.xml
<CustomField>
    <fullName>msf_LargestHistoricalGift__c</fullName>
    <label>Donación de mayor importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>