force-app/main/default/objects/Opportunity/fields/msf_LastReasonCodeReceived__c.field-meta.xml
<CustomField>
    <fullName>msf_LastReasonCodeReceived__c</fullName>
    <label>Último código de devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>