force-app/main/default/objects/Opportunity/fields/msf_LastReversalDate__c.field-meta.xml
<CustomField>
    <fullName>msf_LastReversalDate__c</fullName>
    <label>Fecha de impago</label>
    <type>Date</type>
</CustomField>