force-app/main/default/objects/Opportunity/fields/msf_LeadId__c.field-meta.xml
<CustomField>
    <fullName>msf_LeadId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidato</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>