force-app/main/default/objects/Opportunity/fields/msf_LeadSource3Level__c.field-meta.xml
<CustomField>
    <fullName>msf_LeadSource3Level__c</fullName>
    <label>Canal de entrada 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource3</valueSetName>
    </valueSet>
</CustomField>