force-app/main/default/objects/Opportunity/fields/msf_LegacyOpportunity__c.field-meta.xml
<CustomField>
    <fullName>msf_LegacyOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidad de la herencia</description>
    <inlineHelpText>Oportunidad de la herencia</inlineHelpText>
    <label>Oportunidad de la herencia</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>El valor no existe o no coincide con una oportunidad de herencia</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Legacy</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Type</field>
            <operation>equals</operation>
            <value>Herencia</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Oportunidades de pago de la herencia</relationshipLabel>
    <relationshipName>OportunidadesHerencias</relationshipName>
    <type>Lookup</type>
</CustomField>