force-app/main/default/objects/Opportunity/fields/msf_LevelAmount__c.field-meta.xml
<CustomField>
    <fullName>msf_LevelAmount__c</fullName>
    <description>Campo que se utiliza para el calculo de levels para tener en cuenta el Valor de mercado para las de tipo InKind. Se utiliza en las rollups personalizadas.</description>
    <formula>IF(RecordType.DeveloperName = &apos;In_Kind_Gift&apos;, IF((ISBLANK(npsp__Fair_Market_Value__c) ||npsp__Fair_Market_Value__c=0),Amount,npsp__Fair_Market_Value__c)
, Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Level) Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>