force-app/main/default/objects/Opportunity/fields/msf_MailingSegment__c.field-meta.xml
<CustomField>
    <fullName>msf_MailingSegment__c</fullName>
    <label>Segmento colaborador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>