force-app/main/default/objects/Opportunity/fields/msf_ModificationCampaign__c.field-meta.xml
<CustomField>
    <fullName>msf_ModificationCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña de modificación</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No es posible seleccionar una campaña de Voluntarios</errorMessage>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Volunteers_Campaign</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Oportunidades (Campaña de modificación)</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>