force-app/main/default/objects/Opportunity/fields/msf_NTimesReversed__c.field-meta.xml
<CustomField>
    <fullName>msf_NTimesReversed__c</fullName>
    <label>Número de Devoluciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>