force-app/main/default/objects/Opportunity/fields/msf_OldQuotaModification__c.field-meta.xml
<CustomField>
    <fullName>msf_OldQuotaModification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modificación de cuota antiguo</label>
    <referenceTo>msf_QuotaModification__c</referenceTo>
    <relationshipLabel>Opportunities (Modificación de cuota antiguo)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>