force-app/main/default/objects/Opportunity/fields/msf_OriginalLevel__c.field-meta.xml
<CustomField>
    <fullName>msf_OriginalLevel__c</fullName>
    <description>Level del donante en el momento de hacer la donación.</description>
    <label>Level de creación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>