force-app/main/default/objects/Opportunity/fields/msf_PaymentAuthorisationCode__c.field-meta.xml
<CustomField>
    <fullName>msf_PaymentAuthorisationCode__c</fullName>
    <label>Código de autorización de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>