force-app/main/default/objects/Opportunity/fields/msf_ProactiveDonor__c.field-meta.xml
<CustomField>
    <fullName>msf_ProactiveDonor__c</fullName>
    <label>Proactivo donante/Propuesta MSF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proactivo donante</fullName>
            </value>
            <value>
                <fullName>Propuesta MSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>