force-app/main/default/objects/Opportunity/fields/msf_Program__c.field-meta.xml
<CustomField>
    <fullName>msf_Program__c</fullName>
    <label>Programa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>