force-app/main/default/objects/Opportunity/fields/msf_Rating__c.field-meta.xml
<CustomField>
    <fullName>msf_Rating__c</fullName>
    <label>Caliente, templado o frío</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caliente</fullName>
            </value>
            <value>
                <fullName>Templado</fullName>
            </value>
            <value>
                <fullName>Frio</fullName>
                <label>Frío</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>