force-app/main/default/objects/Opportunity/fields/msf_ReasonLoss__c.field-meta.xml
<CustomField>
    <fullName>msf_ReasonLoss__c</fullName>
    <label>Motivo pérdida/rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No encaja propuesta</fullName>
            </value>
            <value>
                <fullName>No encaja en sus tiempos</fullName>
            </value>
            <value>
                <fullName>Por código ético</fullName>
            </value>
            <value>
                <fullName>Otras causas</fullName>
            </value>
            <value>
                <fullName>Marketing con causa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>