force-app/main/default/objects/Opportunity/fields/msf_RecurringPeriod__c.field-meta.xml
<CustomField>
    <fullName>msf_RecurringPeriod__c</fullName>
    <label>Periodicidad donación recurrente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Bimensual</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>