force-app/main/default/objects/Opportunity/fields/msf_Segment__c.field-meta.xml
<CustomField>
    <fullName>msf_Segment__c</fullName>
    <label>Segmento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>