force-app/main/default/objects/Opportunity/fields/msf_SmallestHistoricalGift__c.field-meta.xml
<CustomField>
    <fullName>msf_SmallestHistoricalGift__c</fullName>
    <label>Donación de menor importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>