force-app/main/default/objects/Opportunity/fields/msf_SMSExternalId__c.field-meta.xml
<CustomField>
    <fullName>msf_SMSExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Id externo SMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>