force-app/main/default/objects/Opportunity/fields/msf_TipoDeMiembro__c.field-meta.xml
<CustomField>
    <fullName>msf_TipoDeMiembro__c</fullName>
    <label>Tipo de miembro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>