force-app/main/default/objects/Opportunity/fields/msf_Token__c.field-meta.xml
<CustomField>
    <fullName>msf_Token__c</fullName>
    <formula>npsp4hub__Payment_Profile__r.cpm__Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token</label>
    <type>Text</type>
</CustomField>