force-app/main/default/objects/Opportunity/fields/msf_TotalNumberHistoricalGifts__c.field-meta.xml
<CustomField>
    <fullName>msf_TotalNumberHistoricalGifts__c</fullName>
    <label>Nº Total de donaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>