force-app/main/default/objects/Opportunity/fields/msf_TypeEmployeesCustomers__c.field-meta.xml
<CustomField>
    <fullName>msf_TypeEmployeesCustomers__c</fullName>
    <label>Tipo (empleados / clientes)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empleados</fullName>
            </value>
            <value>
                <fullName>Clientes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>