force-app/main/default/objects/Opportunity/fields/msf_TypeFundraisingContribution__c.field-meta.xml
<CustomField>
    <fullName>msf_TypeFundraisingContribution__c</fullName>
    <formula>CASE(RecordType.DeveloperName , 
     
     &quot;Donation&quot;,CASE( Type ,
           &quot;Recurrent Donation&quot;,&quot;S&quot;,
           &quot;SMS Donor&quot;,&quot;D&quot;,
           &quot;One off Donation&quot;,&quot;D&quot;,
           &quot;SMS Operator&quot;,&quot;D&quot;,
           &quot;Employee or client Donation&quot;,&quot;D&quot;,
           &quot;Recovered Quota&quot;,&quot;S&quot;,
           &quot;Solidarity initiative&quot;,&quot;D&quot;,
           &quot;Solidarity Wedding&quot;,&quot;D&quot;,
           &quot;Solidarity Gift&quot;,&quot;D&quot;, null),

     &quot;Grant&quot;,IF(ISPICKVAL(Type, &quot;Grant&quot;), &quot;G&quot;, null),

     &quot;In_Kind_Gift&quot;,IF(ISPICKVAL(Type, &quot;In-Kind Gift&quot;), &quot;I&quot;, null),

     &quot;Matching_Gift&quot;,IF(ISPICKVAL(Type, &quot;Matching Gift&quot;), &quot;D&quot;, null),

     &quot;Membership&quot;,IF(ISPICKVAL(Type, &quot;Membership&quot;), &quot;A&quot;, null),

     &quot;Legacy&quot;,CASE( Type ,
           &quot;Herencia&quot;,&quot;H&quot;,
           &quot;Pago de Herencia&quot;,&quot;H&quot;, null),

      null

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo aportación Fundraising</label>
    <type>Text</type>
</CustomField>