force-app/main/default/objects/Opportunity/fields/msf_UncheckUtimosMeses__c.field-meta.xml
<CustomField>
    <fullName>msf_UncheckUtimosMeses__c</fullName>
    <externalId>true</externalId>
    <label>UncheckUtimosMeses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>