force-app/main/default/objects/Opportunity/fields/msf_URL_FormWeb__c.field-meta.xml
<CustomField>
    <fullName>msf_URL_FormWeb__c</fullName>
    <label>URL del formulario web</label>
    <type>Url</type>
</CustomField>