force-app/main/default/objects/Opportunity/fields/msf_WorkTeam__c.field-meta.xml
<CustomField>
    <fullName>msf_WorkTeam__c</fullName>
    <label>Equipo de trabajo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>